infrastructure/traefik/traefik-ui.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.wesl.io`)
      middlewares:
        - name: traefik-dashboard-auth
      services:
        - kind: TraefikService
          name: api@internal
